@@ -1,1 +1,1 @@
-sip/Q* usr/share/sip/PyQt5/
+usr/lib/python3*/dist-packages/PyQt5/bindings
